--- a/style/style.css
+++ b/style/style.css
@@ -1,82 +1,88 @@
-html{
-    background-color: hsl(217, 54%, 11%);
-}
 
 .container{
-    background-color: hsl(216, 50%, 16%);
-    width: 20%;
-    height: 50%;
-    border-radius: 2%;
-    padding: 50px;
-    text-align: center;
-    margin-left: 35%;
+    display: flex;
+    width: 100%;
+    background-color: hsl(217, 54%, 11%);
+    align-content: center;
+    justify-content: center;
 }
 
+.card{
+    background-color: hsl(216, 50%, 16%);
+    /* display: flex; */
+    flex-direction: column;
+    width: calc(100% - 1000px);
+    padding: calc(100% - 1300px);
+    border-radius: 10px;
+    margin-top: 7%;
+    margin-bottom: 7%;
+    /* justify-content: center; */
+    /* align-content: center; */
+    /* align-items: center; */
+}
 
 #nft{
-    width: 100%;
-    /* display: block; */
+    width: calc(100% - 30px);
+    margin-left: 5%;
 }
 
 h2, p, h3{
     font-family: 'Outfit', sans-serif;
-    justify-content: center;
 }
-
 
 h2{
     color: hsl(0, 0%, 100%);
     text-align: center;
-    
+}
+
+p, h3{
+    color: hsl(215, 51%, 70%);
 }
 
 p{
-    font-size: 18px;
-    color: hsl(215, 51%, 70%);
-    text-align: left;
+    font-size: 20px;
+    display: inline-block;
 }
 
-
-#price{
-    color: hsl(178, 100%, 50%);
-    margin-right: 10%;
+.value, .time{
+    display: inline-block;
 }
+
+.time{
+    padding-left: 33%;
+}
+/* #ethereum, #price, #clock, #timeLeft{
+    width: 50%;
+    display: inline-block;
+} */
 
 #ethereum{
-    width: 5%;
-    margin-right: 5px;
-}
-
-#ethereum, #price{
-    display: inline-block;
+    width: 10%;
 }
 
 #clock{
-    width: 7%;
-    margin-right: 5px;
-}
-
-#timeLeft, #clock{
-    display: inline-block;
+    width: 15%;
 }
 
 hr{
-    stroke: hsl(215, 32%, 27%);
+    width: 100%;
 }
 
-#signature{
-    color: hsl(215, 51%, 70%);
+.creator{
+    width: 100%;
+}
+
+#perfil, #signature{
+    display: inline-block;
+    margin-top: 5%;
+}
+
+#perfil{
+    width: calc(100% - 300px);
+    padding-right: 5%;
+    /* margin-left: 45px; */
 }
 
 #name{
     color: hsl(0, 0%, 100%);
-}
-
-#signature, #perfil{
-    display: inline-block;
-}
-
-#perfil{
-    width: 10%;
-    margin-right: 10px;
 }
