--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,7 @@
 
-.container{
+body{
     display: flex;
-    width: 100%;
+    min-height: 100vh;
     background-color: hsl(217, 54%, 11%);
     align-items: center;
     justify-content: center;
@@ -12,7 +12,6 @@
     display: flex;
     flex-flow: wrap column ;
     width: 20%;
-    height: 10%;
     padding: 3%;
     border-radius: 10px;
 }
@@ -22,18 +21,22 @@
     align-self: center;
 }
 
-h2, p, h3{
+h1, h2, p, h3{
     font-family: 'Outfit', sans-serif;
 }
 
-h2{
+h1{
     color: hsl(0, 0%, 100%);
     font-size: 170%;
     text-align: center;
 }
 
-p, h3{
+h2, p, h3{
     color: hsl(215, 51%, 70%);
+}
+
+h2{
+    font-size: 18px;
 }
 
 p{
