--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,6 @@
 
 body{
     display: flex;
-    max-width: 1440px;
     min-width: 375px;
     min-height: 100vh;
     background-color: hsl(217, 54%, 11%);
@@ -13,8 +12,7 @@ body{
     background-color: hsl(216, 50%, 16%);
     display: flex;
     flex-direction: column ;
-    width: calc(100% - 90%);
-    min-width: calc(100% - 50%);
+    width: 20%;
     padding: calc(100% - 95%);
     border-radius: 10px;
 }
